--- a/index.html
+++ b/index.html
@@ -179,13 +179,32 @@
         <div id="skills">
             <h2 class="heading">Skills</h2>
             <ul>
+                <li>HTML5/CCS3</li>
                 <li>JavaScript</li>
-                <li>Python</li>
-                <li>Ruby</li>
-                <li>Go</li>
+                <li>JQuery</li>
                 <li>AngularJs</li>
+            </ul>
+            <ul>
+                <li>Python</li>
+                <li>Go</li>
                 <li>Java</li>
                 <li>C</li>
+            </ul>
+            <ul>
+                <li>JEE</li>
+                <li>Spring Framework</li>
+                <li>WebServices</li>
+                <li>JAX-RS/JAX-WS</li>
+                <li>JPA/Pooling</li>
+                <li>JSF/JSP</li>
+                <li>MYSQL</li>
+                <li>Logging Frameworks</li>
+            </ul>
+            <ul>
+                <li>Ant</li>
+                <li>Maven</li>
+                <li>Gradle</li>
+                <li>Go build tool</li>
             </ul>
         </div>
         <!-- End #skills -->
