--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <li>JavaScript</li>
                 <li>JQuery</li>
                 <li>AngularJs</li>
+                <li>Vue</li>
             </ul>
             <ul>
                 <li>Python</li>
@@ -203,8 +204,6 @@
             <ul>
                 <li>Ant</li>
                 <li>Maven</li>
-                <li>Gradle</li>
-                <li>Go build tool</li>
             </ul>
         </div>
         <!-- End #skills -->
