--- a/index.html
+++ b/index.html
@@ -1,214 +1,227 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Rodrigo Villablanca</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-        <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/styles.css" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rodrigo Villablanca</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
-    </head>
+</head>
 
-    <body>
-        <div id="mobile-menu-open" class="shadow-large">
-            <i class="fa fa-bars" aria-hidden="true"></i>
+<body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
-        <!-- End #mobile-menu-toggle -->
-        <header>
-            <div id="mobile-menu-close">
-                <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-            </div>
-            <ul id="menu" class="shadow">
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#experience">Experience</a>
-                </li>
-                <li>
-                    <a href="#education">Education</a>
-                </li>
-                <li>
-                    <a href="#projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#skills">Skills</a>
-                </li>
-<!--                <li>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <!--                <li>
                     <a href="#contact">Contact</a>
                 </li>-->
-            </ul>
-        </header>
-        <!-- End header -->
+        </ul>
+    </header>
+    <!-- End header -->
 
-        <div id="lead">
-            <div id="lead-content">
-                <h1>Rodrigo Villablanca</h1>
-                <h2>Software Engineer</h2>
-                <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
-            </div>
-            <!-- End #lead-content -->
-
-            <div id="lead-overlay"></div>
-
-            <div id="lead-down">
-                <span>
-                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                </span>
-            </div>
-            <!-- End #lead-down -->
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Rodrigo Villablanca</h1>
+            <h2>Software Engineer</h2>
+            <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
         </div>
-        <!-- End #lead -->
+        <!-- End #lead-content -->
 
-        <div id="about">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h2 class="heading">About Me</h2>
-                    </div>
-                    <div class="col-md-8">
-                        <p>
-                            Software developer with 5+ years using Java for programming and web-development.
-                            Full experience with Java related frameworks like Spring, JPA, WebServices (JAX-WS, JAX-RS, CXF), OOP Design.
-                            Constantly watching Github projects and learning new technologies and programming languages.
-                            Medium skills with Python, Shell Script, Go (Golang).
-                        </p>
-                    </div>
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
                 </div>
-            </div>
-        </div>
-        <!-- End #about -->
-
-        <div id="experience" class="background-alt">
-            <h2 class="heading">Experience</h2>
-            <div id="experience-timeline">
-                <div data-date="January 2014 – Current">
-                    <h3>KDU Ingeniería</h3>
-                    <h4>Enginner Software</h4>
+                <div class="col-md-8">
                     <p>
-                        Analisys, design and development of Enterprise Software.
-
-                        Key Technologies:
-
-                        * JAVA - JEE
-                        * Spring Framework
-                        * Tomcat 6/7/8 Web Container
-                        * Oracle Weblogic Application 10.3.5
-                        * WebServices (Apache CXF, JAX-WS)
-                        * RESTFul Services (Apache CXF, JAX-RS)
-                        * Server Side View Interfaces (JSP, JSF2, Primefaces, Struts2, Spring MVC)
-                        * Client Side Technologies (XHTML, CSS, Javascript, jQuery, Angular)
-                        * Build Tools like Apache Ant, Apache Maven, Gradle.
-                        * Unit Testing with JUnit.
+                        Software developer with 5+ years using Java for programming and web-development.
+                        Full experience with Java related frameworks like Spring, JPA, WebServices (JAX-WS, JAX-RS,
+                        CXF), OOP Design.
                     </p>
-                </div>
-                <div data-date="April 2011 – Dicember 2013">
-                    <h3>EXPERTI</h3>
-                    <h4>Enginner Software</h4>
                     <p>
-                        Development and design of main web payment in Chile, Webpay. It covers over 90% of payment web transactions and it is used from small and large e-commerce companies.
-                        My main goal was develop another way of integration using SOAP WebServices and WS-Security for encryption and digital signature.
+                        Constantly watching Github projects and learning new technologies and programming languages.
+                        Lately I have been using Go for my side projects.
+                    </p>
+                    <p>
+                        Medium skills with Python, Shell Script, Go (Golang).
                     </p>
                 </div>
             </div>
         </div>
-        <!-- End #experience -->
+    </div>
+    <!-- End #about -->
 
-        <div id="education">
-            <h2 class="heading">Education</h2>
-            <div class="education-block">
-                <h3>Universidad Tecnológica Metropólitana</h3>
-                <span class="education-date">January 2006 - January 2012</span>
-                <h4>Bachelor of Science in Computer Science</h4>
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="January 2014 – Current">
+                <h3>KDU Ingeniería</h3>
+                <h4>Enginner Software</h4>
                 <p>
-                    Computer's Science, Programming Languages, Data communication, Data Structures
+                    Analisys, design and development of Enterprise Software.
+                </p>
+                <h5>
+                    Key Technologies:
+                </h5>
+                <ul>
+                    <li>JAVA - JEE</li>
+                    <li>Spring Framework</li>
+                    <li>Tomcat 6/7/8 Web Container</li>
+                    <li>Oracle Weblogic Application 10.3.5</li>
+                    <li>WebServices (Apache CXF, JAX-WS)</li>
+                    <li>RESTFul Services (Apache CXF, JAX-RS)</li>
+                    <li>Server Side View Interfaces (JSP, JSF2, Primefaces, Struts2, Spring MVC)</li>
+                    <li>Client Side Technologies (XHTML, CSS, Javascript, jQuery, Angular)</li>
+                    <li> Build Tools like Apache Ant, Apache Maven, Gradle.</li>
+                    <li>Unit Testing with JUnit.</li>
+                </ul>
+            </div>
+            <div data-date="April 2011 – Dicember 2013">
+                <h3>EXPERTI</h3>
+                <h4>Enginner Software</h4>
+                <p>
+                    Development and design of main web payment in Chile, Webpay. It covers over 90% of payment web
+                    transactions and it is used from small and large e-commerce companies.
+                </p>
+                <p>
+                    My main goal was develop another way of integration using SOAP WebServices and WS-Security for
+                    encryption and digital signature.
                 </p>
             </div>
-            <!-- End .education-block -->
-
-            <!-- End .education-block -->
         </div>
-        <!-- End #education -->
+    </div>
+    <!-- End #experience -->
 
-        <div id="projects" class="background-alt">
-            <h2 class="heading">Projects</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="project shadow-large">
-                        <div class="project-image">
-                            <img src="images/project.jpg" />
-                        </div>
-                        <!-- End .project-image -->
-                        <div class="project-info">
-                            <h3>Github</h3>
-                            <p>
-                                I have some projects that I use to learn some new technologies. 
-                            </p>
-                            <a href="https://github.com/rvillablanca">View Projects</a>
-                        </div>
-                        <!-- End .project-info -->
-                    </div>
-                    <!-- End .project -->
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Universidad Tecnológica Metropólitana</h3>
+            <span class="education-date">January 2006 - January 2012</span>
+            <h4>Bachelor of Science in Computer Science</h4>
+            <p>
+                Computer's Science, Programming Languages, Data communication, Data Structures
+            </p>
+        </div>
+        <!-- End .education-block -->
 
-                    <div class="project shadow-large">
-                        <div class="project-image">
-                            <img src="images/project.jpg" />
-                        </div>
-                        <!-- End .project-image -->
-                        <div class="project-info">
-                            <h3>Job projects</h3>
-                            <p>
-                                You can check out some of my professional projects in my LinkedIn profile.
-                            </p>
-                            <a href="https://www.linkedin.com/in/rodrigo-antonio-villablanca-v%C3%A1squez-93629031/">View Projects</a>
-                        </div>
-                        <!-- End .project-info -->
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
                     </div>
-                    <!-- End .project -->
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Github</h3>
+                        <p>
+                            I have some projects that I use to learn some new technologies.
+                        </p>
+                        <a href="https://github.com/rvillablanca">View Projects</a>
+                    </div>
+                    <!-- End .project-info -->
                 </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Job projects</h3>
+                        <p>
+                            You can check out some of my professional projects in my LinkedIn profile.
+                        </p>
+                        <a href="https://www.linkedin.com/in/rodrigo-antonio-villablanca-v%C3%A1squez-93629031/">View
+                            Projects</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
             </div>
         </div>
-        <!-- End #projects -->
+    </div>
+    <!-- End #projects -->
 
-        <div id="skills">
-            <h2 class="heading">Skills</h2>
-            <ul>
-                <li>HTML5/CCS3</li>
-                <li>JavaScript</li>
-                <li>JQuery</li>
-                <li>AngularJs</li>
-                <li>Vue</li>
-            </ul>
-            <ul>
-                <li>Python</li>
-                <li>Go</li>
-                <li>Java</li>
-                <li>C</li>
-            </ul>
-            <ul>
-                <li>JEE</li>
-                <li>Spring Framework</li>
-                <li>WebServices</li>
-                <li>JAX-RS/JAX-WS</li>
-                <li>JPA/Pooling</li>
-                <li>JSF/JSP</li>
-                <li>MYSQL</li>
-                <li>Logging Frameworks</li>
-            </ul>
-            <ul>
-                <li>Ant</li>
-                <li>Maven</li>
-            </ul>
-        </div>
-        <!-- End #skills -->
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>HTML5/CCS3</li>
+            <li>JavaScript</li>
+            <li>JQuery</li>
+            <li>AngularJs</li>
+            <li>Vue</li>
+        </ul>
+        <ul>
+            <li>Python</li>
+            <li>Go</li>
+            <li>Java</li>
+            <li>C</li>
+        </ul>
+        <ul>
+            <li>JEE</li>
+            <li>Spring Framework</li>
+            <li>WebServices</li>
+            <li>JAX-RS/JAX-WS</li>
+            <li>JPA/Pooling</li>
+            <li>JSF/JSP</li>
+            <li>MYSQL</li>
+            <li>Logging Frameworks</li>
+        </ul>
+        <ul>
+            <li>Ant</li>
+            <li>Maven</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
 
-<!--        <div id="contact">
+    <!--        <div id="contact">
             <h2>Get in Touch</h2>
             <div id="contact-form">
                 <form method="POST" action="https://formspree.io/email@email.com">
@@ -220,41 +233,44 @@
             </div>
              End #contact-form 
         </div>-->
-        <!-- End #contact -->
+    <!-- End #contact -->
 
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-5 copyright">
-                        <p>
-                            Copyright &copy; 2017 Rodrigo Villablanca
-                        </p>
-                    </div>
-                    <div class="col-sm-2 top">
-                        <span id="to-top">
-                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                        </span>
-                    </div>
-                    <div class="col-sm-5 social">
-                        <ul>
-                            <li>
-                                <a href="https://github.com/rvillablanca" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://stackoverflow.com/users/1896517/rvillablanca" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/rovillablanca" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 copyright">
+                    <p>
+                        Copyright &copy; 2017 Rodrigo Villablanca
+                    </p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/rvillablanca" target="_blank"><i class="fa fa-github"
+                                    aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://stackoverflow.com/users/1896517/rvillablanca" target="_blank"><i
+                                    class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/rovillablanca" target="_blank"><i class="fa fa-twitter"
+                                    aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </footer>
-        <!-- End footer -->
+        </div>
+    </footer>
+    <!-- End footer -->
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="js/scripts.min.js"></script>
-    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
+</body>
 
 </html>
