--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             <div data-date="January 2014 – Current">
                 <h3>KDU Ingeniería</h3>
                 <h4>Enginner Software</h4>
-                <p>
+                <p>S
                     Analisys, design and development of Enterprise Software.
                 </p>
                 <h5>
                     Key Technologies:
                 </h5>
-                <ul>
+                <ul>S
                     <li>JAVA - JEE</li>
                     <li>Spring Framework</li>
                     <li>Tomcat 6/7/8 Web Container</li>
@@ -240,7 +240,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 Rodrigo Villablanca
+                        2019 Rodrigo Villablanca
                     </p>
                 </div>
                 <div class="col-sm-2 top">
